improvements to table view

--- a/TRMNL-meal-plan.html
+++ b/TRMNL-meal-plan.html
@@ -6,77 +6,77 @@
     <tbody>
 
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Monday' %}label--inverted{% endif %} mr--8 p--1">Monday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Monday' %}label--inverted{% endif %} mr--2 p--1">Monday</span></td>
         <td>
           {% for item in list.Monday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Tuesday' %}label--inverted{% endif %} mr--8 p--1">Tuesday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Tuesday' %}label--inverted{% endif %} mr--2 p--1">Tuesday</span></td>
         <td>
           {% for item in list.Tuesday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Wednesday' %}label--inverted{% endif %} mr--8 p--1">Wednesday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Wednesday' %}label--inverted{% endif %} mr--2 p--1 pr--0.1" style="min-width: 6rem; font-size: 0.85rem;">Wednesday</span></td>
         <td>
           {% for item in list.Wednesday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Thursday' %}label--inverted{% endif %} mr--8 p--1">Thursday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Thursday' %}label--inverted{% endif %} mr--2 p--1">Thursday</span></td>
         <td>
           {% for item in list.Thursday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Friday' %}label--inverted{% endif %} mr--8 p--1">Friday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Friday' %}label--inverted{% endif %} mr--2 p--1">Friday</span></td>
         <td>
           {% for item in list.Friday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Saturday' %}label--inverted{% endif %} mr--8 p--1">Saturday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Saturday' %}label--inverted{% endif %} mr--2 p--1">Saturday</span></td>
         <td>
           {% for item in list.Saturday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
 
       </tr>
       <tr>
-        <td><span class="label label--outline {% if current_day == 'Sunday' %}label--inverted{% endif %} mr--8 p--1">Sunday</span></td>
+        <td><span class="label label--outline {% if current_day == 'Sunday' %}label--inverted{% endif %} mr--2 p--1">Sunday</span></td>
         <td>
           {% for item in list.Sunday %}
             <div class="item">
-              <div class="label">{{ item }}</div>
+              <div class="label label--small">{{ item }}</div>
             </div>
           {% endfor %}
         </td>
@@ -91,5 +91,4 @@
 
 <div class="title_bar">
   <span class="title">Weekly Meal Planner</span>
-  <span class="instance">CW {{current_week}} </span>
 </div>
